--- a/game_of_life/no_constraints/test/CMakeLists.txt
+++ b/game_of_life/no_constraints/test/CMakeLists.txt
@@ -10,7 +10,7 @@ FetchContent_MakeAvailable(googletest)
 include(GoogleTest)
 
 add_executable(GameOfLifeTests game_of_life.cpp)
-target_link_libraries(GameOfLifeTests PRIVATE GTest::gtest_main)
+target_link_libraries(GameOfLifeTests PRIVATE GameOfLifeLib GTest::gtest_main)
 target_include_directories(GameOfLifeTests PRIVATE ${CMAKE_SOURCE_DIR})
 
 gtest_discover_tests(GameOfLifeTests)
