--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -2,4 +2,7 @@ add_executable(GameOfLife
     main.cpp
 )
 
+target_include_directories(GameOfLife PRIVATE
+    ${CMAKE_SOURCE_DIR}/lib/${IMPLEMENTATION}/inc/)
+
 target_link_libraries(GameOfLife PRIVATE GameOfLifeLib)
