--- a/lib/no_lists/CMakeLists.txt
+++ b/lib/no_lists/CMakeLists.txt
@@ -1,2 +1,3 @@
-add_library(GoL_no_lists src/generation.cpp src/cell.cpp)
+add_library(GoL_no_lists src/cells.cpp src/prime_utils.cpp)
+target_include_directories(GoL_no_lists PRIVATE inc/)
 target_link_libraries(GoL_no_lists PUBLIC GameOfLifeIfaceLib)
