Add tests for get_prime_from_cell() utility function

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,5 +14,12 @@ target_link_libraries(GameOfLifeTests PRIVATE GameOfLifeLib GTest::gtest_main)
 target_include_directories(GameOfLifeTests PRIVATE
     ${CMAKE_SOURCE_DIR}/lib/${IMPLEMENTATION}/inc/)
 
-#gtest_discover_tests(GameOfLifeTests)
-add_test(NAME GameOfLifeTests COMMAND GameOfLifeTests)
+gtest_discover_tests(GameOfLifeTests)
+
+add_executable(NoListsPrimeUtilsTests no_lists_prime_utils.cpp)
+target_link_libraries(NoListsPrimeUtilsTests PRIVATE GameOfLifeLib GoL_no_lists GTest::gtest_main)
+target_include_directories(NoListsPrimeUtilsTests PRIVATE
+    ${CMAKE_SOURCE_DIR}/lib/${IMPLEMENTATION}/inc/)
+
+gtest_discover_tests(NoListsPrimeUtilsTests)
+#add_test(NAME GameOfLifeTests COMMAND GameOfLifeTests)
