--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,15 +7,21 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
-
+  run-tests:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        impl_type: [no_constraints, no_lists]
     steps:
     - uses: actions/checkout@v4
+
     - name: configure
-      run: cmake -B build
+      run: |
+        cmake -B build-${{ matrix.impl_type }} \
+        -DIMPLEMENTATION=${{ matrix.impl_type }}
+
     - name: build
-      run: cmake --build build
+      run: cmake --build build-${{ matrix.impl_type }} --parallel
+
     - name: test
-      run: ctest --test-dir build/test
+      run: ctest --test-dir build-${{ matrix.impl_type }}/test
