Refactor viewer for better readability
Also ran cmake formatter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,10 @@ add_subdirectory(lib)
 set(_known_impls "no_constraints" "no_lists")
 
 if(NOT IMPLEMENTATION IN_LIST _known_impls)
-    message(WARNING "Unknown implementation: ${IMPLEMENTATION}. Defaulting to no_constraints.")
+    message(
+        WARNING
+        "Unknown implementation: ${IMPLEMENTATION}. Defaulting to no_constraints."
+    )
     set(IMPLEMENTATION "no_constraints")
 endif()
 
