--- a/lib/interface/CMakeLists.txt
+++ b/lib/interface/CMakeLists.txt
@@ -1,3 +1,6 @@
 add_library(GameOfLifeIfaceLib INTERFACE)
 
-target_include_directories(GameOfLifeIfaceLib INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/inc)
+target_include_directories(
+    GameOfLifeIfaceLib
+    INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/inc
+)
